user dan cars endpoint done.

--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
 PORT=3000
 DATABASE_PASSWORD=joviojovio
-DATABASE = mongodb+srv://jonjovio:<PASSWORD>@clusteradvjavatubes.vtajqh7.mongodb.net/HBTravel?retryWrites=true&w=majority&appName=ClusterAdvJavaTubes
+DATABASE = mongodb://jonjovio:<PASSWORD>@ac-xqhl4ub-shard-00-00.vtajqh7.mongodb.net:27017,ac-xqhl4ub-shard-00-01.vtajqh7.mongodb.net:27017,ac-xqhl4ub-shard-00-02.vtajqh7.mongodb.net:27017/HBTravel?replicaSet=atlas-7b65ij-shard-0&ssl=true&authSource=admin
 DATABASE_LOCAL = mongodb://localhost:27017/HBTravel
